# AgentForge

./: .env.example  .gitignore  LICENSE  README.md  TASKS.md  next-steps-plan.md  pyproject.toml  research-reader-tasks.md  tasks_doc_scorer.md  tasks_doc_scorer2.md  tasks_refactor.md  tasks_refactor2.md  tasks_refactor3.md  tasks_scorer.md  token_overflow_plan.md  token_overflow_plan2.md  token_overflow_plan3.md
.github/:  prompt-doxygen.md  copilot-instructions.md  instructions.md  prompt-template-refactors.md  prompt-template.md  prompt-template_phase1.md  prompt-template_phase2.md
agentforge/: cli.py
agentforge/contracts/: models.py
agentforge/control/: __init__.py  adapters.py  discovery.py  events.py  handoff.py  plugin_contract.py  registry.py  runtime.py  scheduler.py  state.py
agentforge/orchestrator/: __init__.py  cache.py  executor.py  pipeline.py  resolver.py  runner.py
agentforge/providers/: __init__.py  base.py  claude_client.py  openai_client.py  parsing.py
agents/: __init__.py
docs/: adr-0000.md  architecture.md  lumen-integration-v1.md  policy-v1.md  tool-contract-v1.md
examples/: arxiv_digest_plan.yaml  arxiv_llm_agents_plan.yaml  arxiv_llm_evaluation_plan.yaml  arxiv_llm_theory_plan.yaml  research_digest.local.yaml
pipelines/: research_digest.yaml
schemas/: agent.json  digest.json  doc.json  manifest.json  pipeline.json
tasks/: task-refactor-01.md  task-refactor-02.md  task-refactor-03.md  task-refactor-04.md  task-refactor-05.md  task-refactor-06.md  task-refactor-07.md  task-refactor-08.md  task-template.md
(+147 files in other folders)
